<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestActivity"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="bottom"
        android:orientation="vertical"
        tools:context=".HomeActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary_dark"
            android:gravity="center"
            android:text="@string/nss"
            android:textColor="#FFF"
            android:textSize="15pt"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="35dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/nss_logo"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="103dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vision"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="12pt"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Vdes"
                    android:textSize="8pt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:text="@string/mission"
                    android:textSize="12pt"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/mdes"
                    android:textSize="8pt"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/obj"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="12pt"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/objdes"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:textSize="8pt"/>
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Team"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="12pt"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Teamdes"
                    android:textSize="8pt"/>
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="427dp"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/nss_image"
                    tools:layout_editor_absoluteX="24dp"
                    tools:layout_editor_absoluteY="103dp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu2" />

</androidx.drawerlayout.widget.DrawerLayout>
